[package]
name = "yrs-axum-ws"
version = "0.1.0"
edition = "2024"
description = "Axum WebSocket integration for yrs-tokio"
license = "MIT"
authors = ["icode <intelligentcodemail@gmail.com>"]
keywords = ["crdt", "yrs", "tokio", "axum", "websocket"]
homepage = "https://github.com/icode/yrs-tokio"
repository = "https://github.com/icode/yrs-tokio"
readme = "./README.md"

[dependencies]
yrs = { version="0.23", features = ["weak", "sync"] }
yrs-tokio = { path = "../yrs-tokio", features = ["test-utils"] }
axum = { version = "0.8", features = ["ws"] }
futures-core = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", features = ["sink"] }
tracing-subscriber = "0.3"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
tower-http = { version = "0.6", features = ["fs"] }