[package]
name = "yrs-tokio-macros"
version = "0.1.0"
edition = "2024"
description = "Axum WebSocket integration for yrs-tokio macros"
license = "MIT"
authors = ["icode <intelligentcodemail@gmail.com>"]
keywords = ["crdt", "yrs", "tokio", "macros"]
homepage = "https://github.com/icode/yrs-tokio"
repository = "https://github.com/icode/yrs-tokio"
readme = "./README.md"

[dependencies]
quote = "1.0.35"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1.0"
futures-util = { version = "0.3", features = ["sink"], optional = true }
tokio-tungstenite = { version = "0.26", features = ["native-tls"], optional = true }
yrs = { version="0.23", features = ["weak", "sync"], optional = true }
tokio = { version = "1", features = ["full", "net"], optional = true }

[lib]
proc-macro = true

[features]
test-utils = ["dep:futures-util", "dep:tokio-tungstenite", "dep:yrs", "dep:tokio"]

[dev-dependencies]
yrs-tokio = { path = "../yrs-tokio" }
yrs-axum-ws = { path = "../yrs-axum-ws" }
axum = { version = "0.8", features = ["ws"] }
# 文档注释使用，编辑器检测不到使用
futures-core="0.3"