[package]
name = "yrs-tokio-tungstenite"
version = "0.1.0"
edition = "2024"
description = "Tokio Tungstenite WebSocket integration for yrs-tokio"
license = "MIT"
authors = ["icode <intelligentcodemail@gmail.com>"]
keywords = ["crdt", "yrs", "tokio", "websocket", "tokio-tungstenite"]
homepage = "https://github.com/icode/yrs-tokio"
repository = "https://github.com/icode/yrs-tokio"
readme = "./README.md"

[dependencies]
yrs-tokio = { version = "0.1.0", path = "../yrs-tokio", features = ["test-utils"] }
yrs = { version="0.23", features = ["weak", "sync"] }
tokio = { version = "1.45", features = ["rt", "net", "sync", "macros"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = { version = "0.3", features = ["sink"] }
futures-core = "0.3"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.45", features = ["fs", "rt-multi-thread"] }
