[package]
name = "yrs-tokio"
version = "0.1.0"
edition = "2024"
description = "Yrs synchronization protocol using tokio"
license = "MIT"
authors = ["Bartosz Sypytkowski <b.sypytkowski@gmail.com>", "icode <intelligentcodemail@gmail.com>"]
keywords = ["crdt", "yrs", "tokio"]
homepage = "https://github.com/icode/yrs-tokio"
repository = "https://github.com/icode/yrs-tokio"
readme = "./README.md"

[dependencies]
yrs = { version = "0.23.1", features = ["weak", "sync"] }
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1.45", features = ["rt", "net", "sync", "macros", "time"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }

yrs-tokio-macros = { version = "0.1.0", path = "../yrs-tokio-macros" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.10"
tokio-util = { version = "0.7.10", features = ["codec"] }

[features]
test-utils = ["yrs-tokio-macros/test-utils"]