[package]
name = "yrs-warp-ws"
version = "0.1.0"
edition = "2024"
description = "Warp WebSocket integration for yrs-tokio"
license = "MIT"
authors = ["icode <intelligentcodemail@gmail.com>"]
keywords = ["crdt", "yrs", "tokio", "websocket"]
homepage = "https://github.com/icode/yrs-tokio"
repository = "https://github.com/icode/yrs-tokio"
readme = "./README.md"

[dependencies]
yrs-tokio = { path = "../yrs-tokio", features = ["test-utils"] }
yrs = { version="0.23", features = ["weak", "sync"] }
warp = "0.3"
tokio = { version = "1.45", features = ["rt", "net", "sync", "macros", "rt-multi-thread"] }
futures-util = { version = "0.3", features = ["sink"] }
futures-core = "0.3"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures = "0.3"

[dev-dependencies]
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"